chore(config): update go to 1.21 (#16)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "astrolib",
     "bodyclose",
     "coverpkg",
+    "coverprofile",
     "cubiest",
     "deadcode",
     "depguard",
@@ -21,19 +22,24 @@
     "gocyclo",
     "gofmt",
     "goimports",
+    "golangci",
     "gomnd",
+    "goreleaser",
     "gosec",
     "gosimple",
+    "goveralls",
     "govet",
     "graffico",
     "ineffassign",
     "jibberjabber",
     "linters",
+    "mattn",
     "nakedret",
     "nolintlint",
     "pixa",
     "prealloc",
     "repotoken",
+    "shogo",
     "sidewalk",
     "staticcheck",
     "structcheck",
