--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,7 +25,10 @@ linters:
   enable:
     - bodyclose
     # - deadcode
-    - depguard
+    # depguard needs to be reviewed properly and then configured, before
+    # it can be re-enabled.
+    # https://github.com/OpenPeeDeeP/depguard#example-configs
+    # - depguard
     - dogsled
     # - dupl
     - errcheck
@@ -60,3 +63,4 @@ linters:
 
 run:
   issues-exit-code: 1
+  timeout: "5m"
