--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,14 @@
   "cSpell.words": [
     "astrolib",
     "bodyclose",
+    "cmds",
     "coverpkg",
     "coverprofile",
     "cubiest",
     "deadcode",
     "depguard",
     "dogsled",
+    "dotenv",
     "dupl",
     "errcheck",
     "exportloopref",
@@ -36,6 +38,7 @@
     "mattn",
     "nakedret",
     "nolintlint",
+    "outdir",
     "pixa",
     "prealloc",
     "repotoken",
@@ -50,6 +53,7 @@
     "unconvert",
     "unparam",
     "varcheck",
+    "watchv",
     "watchvc",
     "watchvi"
   ]
