chore: update lint to 1.56.2 and fix lint errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "gofmt",
     "goimports",
     "golangci",
+    "gomega",
     "gomnd",
     "goreleaser",
     "gosec",
@@ -37,7 +38,9 @@
     "linters",
     "mattn",
     "nakedret",
+    "nolint",
     "nolintlint",
+    "onsi",
     "outdir",
     "pixa",
     "prealloc",
