--- a/.github/workflows/auto-check-workflow.yml
+++ b/.github/workflows/auto-check-workflow.yml
@@ -7,7 +7,7 @@ on:
       # ${{ github.event.repository.default_branch }} does not
       # work in this scenario.
       #
-      - master
+      - main
 
 permissions:
   contents: write
