--- a/.github/workflows/auto-check-workflow.yml
+++ b/.github/workflows/auto-check-workflow.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Add files and commit changes
         run: |
           git checkout -b main
+          git pull origin main
           git push -u origin main
           git add .
           git commit -m "chore(gh-actions): apply auto-check edits"
