--- a/.github/workflows/auto-check-workflow.yml
+++ b/.github/workflows/auto-check-workflow.yml
@@ -1,13 +1,7 @@
 name: Initialise Repo
 on:
-  create:
-    branches:
-      # NB: its difficult to get the default branch dynamically in
-      # push event, so it has been hardcoded.
-      # ${{ github.event.repository.default_branch }} does not
-      # work in this scenario.
-      #
-      - main
+  repository_dispatch:
+    types: [created]
 
 permissions:
   contents: write
