--- a/.github/workflows/auto-check-workflow.yml
+++ b/.github/workflows/auto-check-workflow.yml
@@ -1,7 +1,8 @@
 name: Initialise Repo
 on:
-  repository_dispatch:
-    types: [created]
+  create:
+    branches:
+      - main
 
 permissions:
   contents: write
@@ -53,6 +54,8 @@ jobs:
           git branch | cat
           echo "default branch: '${{ github.event.repository.default_branch }}'"
           echo "========"
+          git fetch
+          git checkout main
           git add .
           git commit -m "chore(gh-actions): apply auto-check edits"
           git push -u origin ${{ github.event.repository.default_branch }}
