ref: remove extendio (#75)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "astrolib",
     "bodyclose",
     "cmds",
+    "copyloopvar",
     "coverpkg",
     "coverprofile",
     "cubiest",
@@ -17,7 +18,6 @@
     "dupl",
     "errcheck",
     "exportloopref",
-    "extendio",
     "fieldalignment",
     "goconst",
     "gocritic",
@@ -38,6 +38,7 @@
     "linters",
     "mattn",
     "nakedret",
+    "nicksnyder",
     "nolint",
     "nolintlint",
     "onsi",
@@ -47,6 +48,7 @@
     "repotoken",
     "shogo",
     "sidewalk",
+    "snivilised",
     "staticcheck",
     "structcheck",
     "stylecheck",
